# starrydata-python-library

./: .gitignore  README.md  publish.sh  pyproject.toml  readme_developer.md  readme_maintainer.md
example_notebooks/: 1_how_to_use.ipynb
src/starrydata/: __init__.py  dataset.py  test.ipynb  test_2.ipynb  test_dataset.py
src/starrykit/: dataset.py  test_dataset.py
