[project]
name = "starrykit"
version = "0.0.6"
authors = [
  { name="MATO Tomoya", email="tomoya.matou@gmail.com" },
]
description = "Starrydata Python useful tools "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/starrydata/starrydata-"
Issues = "https://github.com/starrydata/starrykit/issues"
